--- a/sysagro/src/styles/hero.css
+++ b/sysagro/src/styles/hero.css
@@ -10,6 +10,11 @@
     width: 50%;
 }
 
+.hero__img {
+    display: flex;
+    justify-content: center;
+}
+
 .hero__content{
     padding-top: 40px;
 }
@@ -23,6 +28,7 @@
 .hero__content p {
     margin-top: 40px;
     font-size: 1.1rem;
+    text-align: justify;
 }
 
 .highlight{
@@ -48,7 +54,21 @@
 .primary__btn{
     background: var(--btn-secondary-bg);
     border: 1px solid var(--btn-primary-bg);
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 1rem;
 }
+
+.primary__btn:hover {
+  background: var(--btn-primary-bg);
+  box-shadow: 0px 0px 5px 1px var(--shadow)
+}
+
 .secondary__btn{
     background: var(--btn-primary-bg);
+}
+
+.imgCelular {
+    width: 100%;
+    max-width: 350px;
 }
