--- a/sysagro/src/components/Header/header.css
+++ b/sysagro/src/components/Header/header.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 80px;
     line-height: 80px;
+    box-shadow: 0px 0px 10px 2px var(--header-shadow);
+    background-color: var(--header-bg);
 }
 
 .nav__wrapper{
@@ -21,6 +23,7 @@
     font-weight: 400;
     font-size: 0.9rem;
     cursor: pointer;
+    font-weight: 700;
 }
 
 .menu__link:hover{
@@ -33,11 +36,17 @@
 }
 
 .light__mode span {
-    color: rgba(255, 255, 255, 0.637);
+    color: var(--link-2-color);
     display: flex;
     align-items: center;
     column-gap: 0.4em;
     font-size: 0.8rem;
+    cursor: pointer;
+    font-weight: 700;
+}
+
+.light__mode span:hover {
+    color: var(--link-2-hover)
 }
 
 
@@ -49,4 +58,12 @@
     top: 0;
     left: 0;
     z-index: 9999;
+}
+
+.menu__item {
+    font-weight: 700;
+}
+
+.menu_item:hover {
+    color: var(--link-hover);
 }
