--- a/sysagro/src/components/Header/header.css
+++ b/sysagro/src/components/Header/header.css
@@ -22,16 +22,14 @@
 
 .menu__link{
     font-weight: 400;
-    font-size: 1.1rem;
+    font-size: 18px;
     cursor: pointer;
     font-weight: 700;
-  
 }
 
 .menu__link:hover{
     color: var(--link-active);
 }
-
 
 .logo h2{
     color: var(--primary-color);
@@ -42,7 +40,7 @@
     display: flex;
     align-items: center;
     column-gap: 0.4em;
-    font-size: 0.8rem;
+    font-size: 16px;
     cursor: pointer;
     font-weight: 700;
 }
