--- a/sysagro/src/components/Header/header.css
+++ b/sysagro/src/components/Header/header.css
@@ -1,9 +1,11 @@
 .header{
     width: 100%;
-    height: 80px;
-    line-height: 80px;
+    height: 5rem;
+    line-height: 5rem;
     box-shadow: 0px 0px 10px 2px var(--header-shadow);
     background-color: var(--header-bg);
+    position: fixed;
+    z-index: 9999;
 }
 
 
@@ -52,8 +54,8 @@
 
 .header__shrink{
     width: 100%;
-    height: 80px;
-    line-height: 80px;
+    height: 5rem;
+    line-height: 5rem;
     position: sticky;
     top: 0;
     left: 0;
