--- a/sysagro/src/styles/hero.css
+++ b/sysagro/src/styles/hero.css
@@ -1,5 +1,6 @@
-
-
+.hero__section {
+    padding-top: 10rem; /* Mesmo tamanho do header mais o adicional que quer*/
+}
 
 .hero__wrapper{
     display: flex;
@@ -63,31 +64,6 @@
     column-gap: 2rem;
 }
 
-.primary__btn, .secondary__btn{
-    padding: 0.8rem 1.5rem;
-    border: none;
-    outline: none;
-    color: #fff;
-    border-radius: 0.2rem;
-    cursor: pointer;
-}
-
-.primary__btn{
-    background: var(--btn-primary-bg);
-    border: 1px solid var(--btn-secondary-bg);
-    font-weight: 700;
-    letter-spacing: 1px;
-    font-size: 1rem;
-}
-
-.primary__btn:hover {
-  background: var(--btn-secondary-bg);
-  box-shadow: 0px 0px 5px 1px var(--shadow-secondary)
-}
-
-.secondary__btn{
-    background: var(--btn-primary-bg);
-}
 
 .imgCelular {
     width: 100%;
