--- a/sysagro/src/components/Header/header.css
+++ b/sysagro/src/components/Header/header.css
@@ -1,19 +1,34 @@
 .header{
     width: 100%;
-    height: 5rem;
+    height: 5.5rem;
     line-height: 5rem;
     box-shadow: 0px 0px 10px 2px var(--header-shadow);
+
     background-color: var(--header-bg);
     position: fixed;
     z-index: 9999;
 }
 
+.logo{
+    max-width:200px;
+    max-height:5rem;
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+.logo path{
+    fill: var(--link-color);
+
+}
 
 .nav__wrapper{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: .1rem;
 }
+
 
 .menu{
     display: flex;
@@ -27,6 +42,7 @@
     font-size: 18px;
     cursor: pointer;
     font-weight: 700;
+    user-select: none;
 }
 
 .menu__link:hover{
@@ -45,6 +61,7 @@
     font-size: 16px;
     cursor: pointer;
     font-weight: 700;
+    user-select: none;
 }
 
 .light__mode span:hover {
@@ -68,4 +85,22 @@
 
 .menu_item:hover {
     color: var(--link-hover);
+}
+
+.navigationMobile {     
+    display: none;
+}
+
+.navigationDesktop {
+    display: flex;
+}
+
+@media (max-width: 991px) { 
+    .navigationMobile {
+        display: flex;
+        justify-content: center;
+    }
+    .navigationDesktop {
+        display: none;
+    }
 }
